--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.socurites</groupId>
 	<artifactId>tkt-elasticsearch</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.0</version>
 
 	<properties>
 		<maven.compiler.source>1.7</maven.compiler.source>
@@ -53,6 +53,7 @@
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
+					<outputDirectory>${basedir}/dist</outputDirectory>
 				</configuration>
 			</plugin>
 		</plugins>
